# xendit-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.dots/: config  xendit-cli-8d7595c2d4408290.md
.dots/archive/: xendit-cli-8d7595c2d4408290.md
.github/workflows/: release.yml
schemas/: command_tree.json  xendit.openapi.json  xendit.postman_collection.json
scripts/: install.sh
src/: command_tree.rs  http.rs  main.rs
tools/: fetch_spec.py  gen_command_tree.py  scrape_api_reference.py
